# i18nC

./: .gitignore  INTERNALS.md  README.md  i18n.bat  i18n.c  i18n.h  i18n.ps1  i18n.sh
test/: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt  hello.c  test.sh
